working on results

--- a/tex/desenvolvimento.tex
+++ b/tex/desenvolvimento.tex
@@ -319,7 +319,7 @@ O valor médio dos pixels no espaço HSB foi obtido para cada imagem, conforme m
 
 \imagem{0.4}{art4}{Extração de atributos realizada pelos autores.}{(KHAIRUNNIZA-BEJO; KAMARUDIN, 2011).}
 
-A faixa de valores de SST foi dividida em três índices (4,0º - 8.0º, 8.0º - 13.0º e 13.0º - 17.0º), de forma que a regressão fosse aplicada em cada faixa separadamente. Ademais, os nove modelos construídos utilizaram 50\% das imagens enquanto que as demais foram empregadas para o teste. 
+A faixa de valores de SST foi dividida em três índices (4,0º - 8.0º, 8.0º - 13.0º e 13.0º - 17.0º), de forma que os resultados estivessem em função de cada faixa. Ademais, os três modelos construídos utilizaram 50\% das imagens enquanto que as demais foram empregadas para o teste. 
 
 A melhor variável obtida foi a matiz, que alcançou uma correlação de Pearson igual a -0,92, enquanto que a saturação e brilho alcançaram coeficientes iguais a 0,85 e 0,66 respectivamente. A matiz apresentou também o menor desvio padrão para os três índices (2,73, 6,31 e 2,44), enquanto que o desvio padrão para o brilho indicou que os valores dos pontos eram bastante dispersos (35,15, 18,09 e 22,79 nos índices 1, 2 e 3 respectivamente). O modelo que emprega matiz apresentou os menores valores para erro médio quadrático no índice 2 e 3 (0,22 e 0,03 ºBrix respectivamente) e a maior Raiz do erro quadrático médio (RMSE, \textit{Root Mean Square Error}) para o índice 1 (0,06 ºBrix). Os modelos com saturação apresentaram os maiores RMSE nos índices 1 e 3, enquanto que o modelo com brilho foi superior no índice 1. Como a diferença entre os erros foi pequena, considerou-se que a matiz provou ser a melhor variável para determinação de SST em mangas, devido ao melhor valor de correlação de Pearson. 
 
