--- a/tex/conclusao.tex
+++ b/tex/conclusao.tex
@@ -3,8 +3,14 @@
 %--------------------------------------------------------------------------------------
 \chapter{Considerações Finais e Trabalhos Futuros}
 
-% \lipsum[1-2]
+Inicialmente testou-se diferentes técnicas de pré-processamento das imagens em uma sequência bem definida, visando a maior redução possível de ruído. As técnicas que proporcionaram um melhor resultado foram o filtro da mediana, as operações de abertura e fechamento, a limiarização simples e a segmentação de Otsu.
+
+Com a extração de atributos e posterior construção dos modelos, concluiu-se, através dos resultados, que é possível determinar sólidos solúveis totais em mangas 'Palmer' com um coeficiente de correlação igual a 0,9789, o maior encontrado na literatura. Enquanto que para os artigos pesquisados foi assumido um relacionamento linear entre as variáveis de entrada e a de saída, no presente estudo foi investigado se um modelo não linear comportaria-se melhor. Através dos resultados obtidos, concluiu-se que, de fato, um modelo não linear apresenta um desempenho melhor. Este resultado pode ser explicado através da inspeção dos atributos mais importantes, que não variam linearmente.
+
+Verificou-se ainda que o espaço de cor mais significante para a determinação de SST é o RGB, em que o canal B se sobressai. A taxa R/B da imagem mostrou-se mais o mais importante, seguido do coeficiente de correlação e média do canal B nas regiões equatorial e da haste. A partir dessas quatro variáveis, construiu-se um novo modelo RF, em que o coeficiente de correlação foi igual a 0,9752.  
  
 \section{Trabalhos futuros}
+
+Através deste trabalho, determinou-se as técnicas de pré-processamento, atributos extraídos e algoritmo de predição que conferem o melhor resultado na determinação de sólidos solúveis totais em mangas da variedade 'Palmer'. A partir disso, torna-se possível construir uma aplicação em que, a partir de uma foto tirada da manga, é determinado de forma não destrutiva o nível de SST na fruta. O ideal é que as fotos sejam tiradas em um ambiente controlado, da mesma forma em que foi realizado neste trabalho. Com o uso de um \textit{smartphone}, as fotos poderiam ser tiradas e enviadas a um servidor, que seria responsável por fazer o tratamento das imagens, extrair os quatro atributos mais significantes, obter o nível de SST através da \textit{Random Forest} e retornar este valor ao usuário.  
 
 % \lipsum[55];
